--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@
   filter: drop-shadow(5px 10px 5px #28281487);
 }
 
+.dark .simplebar-scrollbar::before {
+  background-color: white;
+}
+
 .dark .three-d {
     text-shadow: 0 5px 0 #533519;
 }
